crude prototype, optout of adding restart button, just use Ctrl+R

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="scoreboard">Score: 0</div>
+
+    <div id="popup">
+        <div id="popup-content">
+            <h1 id="popup-title">Game Over</h1>
+            <!-- <button id="restart-btn">Restart</button> -->
+        </div>
+    </div>
+
     <div id="game-container">
         <div id="ground"></div>
         <div id="player"></div>
